[build-system]
requires = [
    "setuptools>=60.0.0",
    "wheel",
    "Cython>=3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pysilo"
dynamic = ["version"]
description = "Python bindings for SILO - high-performance sequence database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL 3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]
dependencies = [
    "Cython>=3.0",
    "pyroaring>=1.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/GenSpectrum/LAPIS-SILO"
Repository = "https://github.com/GenSpectrum/LAPIS-SILO"
Issues = "https://github.com/GenSpectrum/LAPIS-SILO/issues"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.setuptools.dynamic]
version = {file = "version.txt"}
