[package]
name = "createTestDirFromLoculusOrganism"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Taepper"]
readme = "README.md"

[[bin]]
name = "legacy-ndjson-transformer"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
