[package]
name = "legacyNdjsonTransfomer"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Taepper"]
readme = "README.md"
keywords = ["json", "ndjson", "bioinformatics", "sequence", "transform"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "legacy-ndjson-transformer"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
